--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,9 @@ version: "3"
 services:
   web:
     # replace username/repo:tag with your name and image details
-    image: username/repo:tag
+    image: joerocharhythm/demo:python
     deploy:
+      # this will create 5 instances of our web service.
       replicas: 5
       resources:
         limits:
